--- a/package.json
+++ b/package.json
@@ -19,49 +19,53 @@
     ]
   },
   "dependencies": {
-    "@reach/dialog": "^0.2.0",
+    "@reach/dialog": "^0.13.2",
     "@reach/router": "^1.2.1",
-    "@reach/visually-hidden": "^0.1.1",
+    "@reach/visually-hidden": "^0.13.2",
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.3.26",
+    "gatsby": "^3.0.0",
     "gatsby-image": "^2.0.39",
-    "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-react-svg": "^2.0.0",
-    "gatsby-plugin-sharp": "^2.0.35",
-    "gatsby-plugin-sitemap": "^2.0.12",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-webpack-size": "^0.0.3",
-    "gatsby-source-filesystem": "^2.0.30",
-    "gatsby-transformer-json": "^2.1.11",
-    "gatsby-transformer-remark": "^2.3.9",
-    "gatsby-transformer-sharp": "^2.1.18",
-    "intersection-observer": "^0.5.1",
+    "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-plugin-styled-components": "^4.0.0",
+    "gatsby-plugin-webpack-size": "^1.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-json": "^3.0.0",
+    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
+    "intersection-observer": "^0.12.0",
+    "postcss": "^8.2.7",
+    "postcss-loader": "^5.0.0",
     "prop-types": "^15.6.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-pose": "^4.0.5",
-    "styled-components": "^4.1.3"
+    "react-post": "^1.0.3",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
+    "ava": "^3.15.0",
     "babel-eslint": "^10.0.1",
-    "chrome-launcher": "^0.10.5",
-    "core-js": "^2.6.2",
+    "chrome-launcher": "^0.13.4",
+    "core-js": "^3.9.1",
     "directory-named-webpack-plugin": "^4.0.0",
-    "eslint": "^5.12.1",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "favicons": "^5.3.0",
-    "gatsby-plugin-eslint": "^2.0.3",
-    "lighthouse": "^4.0.0",
-    "mkdirp": "^0.5.1",
-    "node-gyp": "^3.8.0",
-    "prettier": "^1.16.0"
+    "eslint-plugin-react": "^7.22.0",
+    "favicons": "^6.2.1",
+    "gatsby-plugin-eslint": "^3.0.0",
+    "lighthouse": "^7.2.0",
+    "mkdirp": "^1.0.4",
+    "node-gyp": "^7.1.2",
+    "prettier": "^2.2.1"
   }
 }
