--- a/studio/package.json
+++ b/studio/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "wpa-dev <info@whitepantsagency.com>",
+  "author": "Nate Tlaseca <nate@whitepantsagency.com>",
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
@@ -14,16 +14,17 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.5.0",
+    "@sanity/base": "^2.6.0",
     "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.5.0",
-    "@sanity/default-layout": "^2.5.0",
+    "@sanity/core": "^2.6.1",
+    "@sanity/default-layout": "^2.6.0",
     "@sanity/default-login": "^2.2.6",
-    "@sanity/desk-tool": "^2.5.0",
+    "@sanity/desk-tool": "^2.6.1",
     "@sanity/vision": "^2.2.6",
     "prop-types": "^15.7",
     "react": "^17.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {},
   "repository": {
