--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@reach/dialog": "^0.13.2",
     "@reach/router": "^1.2.1",
     "@reach/visually-hidden": "^0.13.2",
+    "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/image-url": "^0.140.22",
     "babel-plugin-styled-components": "^1.10.0",
+    "date-fns": "^2.19.0",
     "gatsby": "^3.0.0",
     "gatsby-image": "^2.0.39",
     "gatsby-plugin-image": "^1.0.0",
