--- a/studio/package.json
+++ b/studio/package.json
@@ -21,12 +21,22 @@
     "@sanity/default-login": "^2.2.6",
     "@sanity/desk-tool": "^2.6.1",
     "@sanity/vision": "^2.2.6",
-    "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-icons": "^4.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier-eslint-cli": "^5.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/wpa-dev/white-pants-gatsby"
