--- a/studio/package.json
+++ b/studio/package.json
@@ -1,41 +1,35 @@
 {
-  "name": "whitepantsagency",
+  "name": "white-pants-gatsby-studio",
   "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
   "author": "Nate Tlaseca <nate@whitepantsagency.com>",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "start": "sanity start",
-    "build": "sanity build"
+    "build": "sanity build",
+    "test": "sanity check"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
     "@sanity/base": "^2.6.0",
+    "@sanity/code-input": "^2.2.6",
+    "@sanity/color-input": "^2.2.6",
     "@sanity/components": "^2.2.6",
     "@sanity/core": "^2.6.1",
+    "@sanity/dashboard": "^2.2.6",
     "@sanity/default-layout": "^2.6.0",
     "@sanity/default-login": "^2.2.6",
     "@sanity/desk-tool": "^2.6.1",
+    "@sanity/production-preview": "^2.2.6",
     "@sanity/vision": "^2.2.6",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-icons": "^4.2.0"
-  },
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-standard": "^4.0.1",
-    "prettier-eslint-cli": "^5.0.0"
   },
   "repository": {
     "type": "git",
