--- a/studio/package.json
+++ b/studio/package.json
@@ -29,7 +29,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "sanity-plugin-asset-source-thispersondoesnotexist": "^0.0.1",
+    "sanity-plugin-asset-source-unsplash": "^0.1.3"
   },
   "repository": {
     "type": "git",
