--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,6 @@
     "ssr": "npm run build && npm run serve",
     "format": "prettier --config ./.prettierrc --write src/**/*.js",
     "build:dir": "mkdirp ./public/icons/",
-    "build:favicons": "node scripts/favicons",
     "build": "npm run build:dir && npm run build:favicons && gatsby build",
     "test": "ava **/*.test.js --verbose"
   },
@@ -26,13 +25,14 @@
     "@sanity/image-url": "^0.140.22",
     "babel-plugin-styled-components": "^1.10.0",
     "date-fns": "^2.19.0",
-    "framer-motion": "^4.0.0",
-    "gatsby": "^3.1.0",
-    "gatsby-plugin-image": "^1.0.0",
+    "framer-motion": "^4.0.3",
+    "gatsby": "^3.1.2",
+    "gatsby-plugin-image": "^1.1.2",
+    "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-plugin-sitemap": "^3.0.0",
     "gatsby-plugin-styled-components": "^4.0.0",
     "gatsby-plugin-webpack-size": "^2.0.1",
@@ -54,21 +54,9 @@
   },
   "devDependencies": {
     "ava": "^3.15.0",
-    "babel-eslint": "^10.0.1",
-    "chrome-launcher": "^0.13.4",
     "core-js": "^3.9.1",
     "directory-named-webpack-plugin": "^4.0.0",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.22.0",
-    "favicons": "^6.2.1",
-    "gatsby-plugin-eslint": "^3.0.0",
     "mkdirp": "^1.0.4",
-    "node-gyp": "^7.1.2",
-    "prettier": "^2.2.1"
+    "node-gyp": "^7.1.2"
   }
 }
