--- a/studio/package.json
+++ b/studio/package.json
@@ -15,23 +15,24 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.6.2",
+    "@sanity/base": "^2.7.2",
     "@sanity/code-input": "^2.2.6",
     "@sanity/color-input": "^2.2.6",
     "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.6.2",
+    "@sanity/core": "^2.7.2",
     "@sanity/dashboard": "^2.2.6",
-    "@sanity/default-layout": "^2.6.2",
-    "@sanity/default-login": "^2.2.6",
-    "@sanity/desk-tool": "^2.6.2",
+    "@sanity/default-layout": "^2.7.2",
+    "@sanity/default-login": "^2.7.0",
+    "@sanity/desk-tool": "^2.7.2",
     "@sanity/production-preview": "^2.2.6",
-    "@sanity/vision": "^2.2.6",
+    "@sanity/vision": "^2.7.3",
     "prop-types": "^15.7.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "sanity-plugin-asset-source-thispersondoesnotexist": "^0.0.1",
-    "sanity-plugin-asset-source-unsplash": "^0.1.3"
+    "sanity-plugin-asset-source-unsplash": "^0.1.3",
+    "sanity-plugin-color-list": "^2.0.1"
   },
   "repository": {
     "type": "git",
