--- a/studio/package.json
+++ b/studio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "white-pants-gatsby-studio",
-  "private": true,
+  "private": false,
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
@@ -15,24 +15,35 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.7.2",
+    "@sanity/base": "^2.7.4",
     "@sanity/code-input": "^2.2.6",
     "@sanity/color-input": "^2.2.6",
     "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.7.2",
-    "@sanity/dashboard": "^2.2.6",
-    "@sanity/default-layout": "^2.7.2",
+    "@sanity/core": "^2.7.4",
+    "@sanity/dashboard": "^2.7.0",
+    "@sanity/default-layout": "^2.7.4",
     "@sanity/default-login": "^2.7.0",
-    "@sanity/desk-tool": "^2.7.2",
+    "@sanity/desk-tool": "^2.7.4",
     "@sanity/production-preview": "^2.2.6",
-    "@sanity/vision": "^2.7.3",
+    "@sanity/vision": "^2.7.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "sanity-plugin-asset-source-thispersondoesnotexist": "^0.0.1",
-    "sanity-plugin-asset-source-unsplash": "^0.1.3",
-    "sanity-plugin-color-list": "^2.0.1"
+    "sanity-plugin-asset-source-unsplash": "^0.1.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^7.23.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-standard": "^5.0.0",
+    "prettier-eslint-cli": "^5.0.0"
   },
   "repository": {
     "type": "git",
